tests/miniJava/neg/005370_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int [] class java { public static void Main ( String [ ] java ) { { } } } ; }
